# dumang-keyboard-ctrl

./: .gitignore  .pre-commit-config.yaml  Makefile  PKGBUILD  README.md  config.yml  dumang-sync.py  dumang_common.py  dumang_sync.py  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md
dumang_ctrl/: __init__.py
dumang_ctrl/dumang/: common.py  gui.py
dumang_ctrl/tools/: config.py  sync.py
install/archlinux/: PKGBUILD  dumang-service.install
install/debian/: install.sh
python/: README.md  config.yml  dumang_common.py  dumang_config.py  dumang_gui.py  dumang_sync.py  setup.py
python/dumang_ctrl/dumang/: common.py  gui.py
python/dumang_ctrl/tools/: config.py  sync.py
systemd/: dumang-sync-python.service  dumang-sync.install  dumang-sync.service
udev/: 51-dumang.rules
